tests/functional2/lang/function-args/eval-fail-unexpected-args.err.exp
error:
       … from call site
         at /pwd/in.nix:1:1:
            1| ({a ? "foo", b ? "bar"}: a + b) {c = "meow"; d = "meow";}
             | ^
            2|

       error: function 'anonymous lambda' called with unexpected arguments 'c' and 'd'
       at /pwd/in.nix:1:2:
            1| ({a ? "foo", b ? "bar"}: a + b) {c = "meow"; d = "meow";}
             |  ^
            2|
       Did you mean one of a or b?
